apps/log-output/manifests/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "log-output"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "log-output"
  template:
    metadata:
      labels:
        app: "log-output"
    spec:
      securityContext:
        fsGroup: 10001
      volumes:
        - name: "shared-output"
          emptyDir: {}
        - name: "shared-data"
          persistentVolumeClaim:
            claimName: "shared-data"
      containers:
        - name: "log-output-writer"
          image: "registry:5111/log-output-writer"
          volumeMounts:
            - name: "shared-output"
              mountPath: "/app/files"
        - name: "log-output-server"
          image: "registry:5111/log-output-server"
          volumeMounts:
            - name: "shared-output"
              mountPath: "/app/files"
            - name: "shared-data"
              mountPath: "/usr/share/data"
