apps/log-output/manifests/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "log-output"
  namespace: "exercises"
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "log-output"
                port:
                  number: 1234
